# arsgab.io

./: .browsersyncrc.js  .editorconfig  .gitignore  .postcssrc.js  CNAME  Makefile  README.md  _config.yml  index.html  package-lock.json  package.json  pelicanconf.py  pnpm-lock.yaml  pyproject.toml  style.css  tasks.py
.github/workflows/: build-and-publish.yml
.run/: devserver.run.xml  watcher.run.xml
articles/: python-ssg.md
assets/: style.css  style.dark.css  style.light.css
assets/scripts/: article-sections.js  color-theme.js  hidden-link.js  load-media.js  picture.js
assets/styles/: article-content.css  article-header.css  article.css  base.css  comments.css  containers.css  home.css  props.css  reset.css  site-footer.css  site-header.css  style.css  theme-dark.css
assets/templates/: allarticles.html  article.html  base.html  index.html  schema.json
assets/templates/partials/: article-toc.html  color-theme-switch.html  nav-header.html  pagemeta.html  picture-tag.html  picture.html  screencast.html  social-links.html
markup/: renderers.py
markup/processors/: aside.py  heading.py  picture.py  screencast.py  substitutions.py  typography.py
utils/: __init__.py  datastructures.py  markdown.py  media.py  schematize.py  staticfiles.py  templating.py  url.py
