[tool.poetry]
name = "arsgab-io"
version = "0.1.0"
description = "Static site generator for articles site"
authors = ["Arseny Gabdullin <me@arsgab.io>"]
readme = "README.md"
packages = [{include = "arsgab_io"}]

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}
python-dotenv = "^1.0.0"
invoke = "^2.1.1"
typus = "0.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"

[tool.ruff]
select = ["E", "F", "I", "T201"]
exclude = [".git", ".venv", "venv", "node_modules", "dist"]
line-length = 100
target-version = "py311"

[tool.ruff.isort]
combine-as-imports = true

[tool.black]
target-version = ["py311"]
skip-string-normalization = true
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
